--- a/resolution.tex
+++ b/resolution.tex
@@ -212,7 +212,7 @@ The increasing occurrence of subsiding grid columns accounts for about half of t
 
 \subsubsection{Subtropics}
 
-Figure~\ref{fig:cape-subt}a shows the dilute CAPE values computed from mean temperature and moisture of subsiding and ascending regions in the $\pm \left( 10^{\circ}-30^{\circ} \right) $ latitude bands, hereafter referred to as the subtropics. The spread in dilute CAPE between ascending and descending grid columns is much smaller than for the deep tropics (Figure~\ref{fig:cape}a), and their dilute CAPE  values vary much less with resolution ($\sim 20$ J/kg, compared with $\sim 80$ J/kg across all resolutions in the deep tropics). The lack of spread in dilute CAPE between ascending/descending regions explains the declining skill in the logistic regression in the subtropics (Figure~\ref{fig:4zonal}a), since without a clear distinction between dilute CAPE of ascending/descending grid columns, subsidence cannot be effective at depressing dilute CAPE below the threshold for convection. There is also no significant changes to the occurrence of subsiding grid columns with resolution; the space-time weights of ascending/descending motion are more-or-less invariant with resolution (Figure~\ref{fig:cape-subt}b).
+Figure~\ref{fig:cape-subt}a shows the dilute CAPE values computed from mean temperature and moisture of subsiding and ascending regions in the $\pm \left( 10^{\circ}-30^{\circ} \right) $ latitude bands, hereafter referred to as the subtropics. The spread in dilute CAPE between ascending and descending grid columns is much smaller than for the deep tropics (Figure~\ref{fig:cape}a), and their dilute CAPE  values vary much less with resolution ($\sim 20$ J/kg, compared with $\sim 80$ J/kg across all resolutions in the deep tropics). The lack of spread in dilute CAPE between ascending/descending regions explains the declining skill in the logistic regression in the subtropics (Figure~\ref{fig:4zonal}a), since with no strong dependence of dilute CAPE on ascending/descending regimes, subsidence cannot be a skillful predictor of depressing dilute CAPE below the threshold for convection. There is also no significant changes to the occurrence of subsiding grid columns with resolution; the space-time weights of ascending/descending motion are more-or-less invariant with resolution (Figure~\ref{fig:cape-subt}b).
 
 \begin{figure}
 \begin{center}
@@ -222,7 +222,7 @@ Figure~\ref{fig:cape-subt}a shows the dilute CAPE values computed from mean temp
 \label{fig:cape-subt}
 \end{figure}
 
-To understand why dilute CAPE is so insensitive to subsidence in the subtropics, Figure~\ref{fig:transect} shows two snapshots of $\omega$ in the longitude-pressure plane at  $\sim 18^{\circ}$ latitude in the $ne30$ simulations, overlain by an isoline delineating where the ZM mass fluxes are quite active. The ZM mass fluxes typically only extend up to about the $800$ hPa level, which often occurs with subsiding motion aloft. In the $\pm \left(10^{\circ}-20^{\circ} \right)$ latitude bands there are opposing influences on dilute CAPE; a global maximum in surface latent heat fluxes (Figure~\ref{fig:4zonal}c), influencing the thermodynamic state of boundary layer parcels and increasing dilute CAPE from below \citep{Z2002JGR}, and subsidence, which opposes dilute CAPE from above. The shallow convection regime of the ZM scheme depicted in Figure~\ref{fig:transect} is likely a result of these two opposing influences on CAPE, with large latent heat fluxes increasing dilute CAPE just above the threshold for convection, but with subsidence restricting dilute CAPE from becoming much larger.
+To understand why dilute CAPE is so insensitive to subsidence in the subtropics, Figure~\ref{fig:transect} shows two snapshots of $\omega$ in the longitude-pressure plane at  $\sim 18^{\circ}$ latitude in the $ne30$ simulations, overlain by an isoline delineating where the ZM mass fluxes are quite active. The ZM mass fluxes typically only extend up to about the $800$ hPa level in this region, which often occurs with appreciable subsiding motion aloft. In the $\pm \left(10^{\circ}-20^{\circ} \right)$ latitude bands there are opposing influences on dilute CAPE; a global maximum in surface latent heat fluxes (Figure~\ref{fig:4zonal}c), influencing the thermodynamic state of boundary layer parcels and increasing dilute CAPE from below \citep{Z2002JGR}, and subsidence, which opposes dilute CAPE from above. The shallow convection regime of the ZM scheme depicted in Figure~\ref{fig:transect} is likely a result of these two opposing influences on CAPE, with large latent heat fluxes increasing dilute CAPE just above the threshold for convection, but with subsidence restricting dilute CAPE from becoming much larger.
 
 \begin{figure}
 \begin{center}
@@ -232,7 +232,7 @@ To understand why dilute CAPE is so insensitive to subsidence in the subtropics,
 \label{fig:transect}
 \end{figure}
 
-AGCMs are known to suffer from a drizzle bias, producing too much light rain relative to observations \citep{D2006JCLIM}. Figure~\ref{fig:4zonal}d shows the fraction of ZM precipitation $\leq 5$ mm/day in the simulations, which stubbornly persists at 70\% in the $\pm \left(10^{\circ}-20^{\circ} \right)$ latitude bands, irrespective of resolution, and where the ZM scheme is producing shallow convection. The analysis of dilute CAPE in the subtropics indicates that the prevalence of drizzle is a result of this shallow convection regime of the ZM scheme. While $FREQZM$ does decrease with resolution in drizzling regions (not shown) consistent with the reduction in dilute CAPE in the subtropics (Figure~\ref{fig:cape-subt}a), the larger magnitude subsidence with resolution is unable to change the drizzling regime of the ZM scheme with resolution.
+AGCMs are known to suffer from a drizzle bias, producing too much light rain relative to observations \citep{D2006JCLIM}. Figure~\ref{fig:4zonal}d shows the fraction of ZM precipitation $\leq 5$ mm/day in the simulations, which stubbornly persists at 70\% in the $\pm \left(10^{\circ}-20^{\circ} \right)$ latitude bands, irrespective of resolution, and where the ZM scheme is producing shallow convection. The analysis of dilute CAPE in the subtropics indicates that the prevalence of drizzle is a result of this shallow convection regime of the ZM scheme. While $FREQZM$ does decrease with resolution in drizzling regions as a result of larger magnitude subsidence and its influence on dilute CAPE (not shown), these resolution sensitivities are not an effective means to eliminate the shallow convection regime of the ZM scheme in the subtropics.
 
 \subsection{Vertical Velocities and Stratiform Precipitation}
 
