--- a/resolution.tex
+++ b/resolution.tex
@@ -242,7 +242,7 @@ R \approx -\frac{1}{g\rho_{w}} \omega^+ q^+ \label{eq:mflux}
 \end{equation}
 where $\omega^+$ and $q^+$ are the upward $\omega$ and specific humidity $q$ at cloud base, respectively, with $g$ the acceleration of gravity and $\rho_w$ the density of rainwater. 
 
-Through approximating the cloud base as the $850$ hPa level, equation~\ref{eq:mflux} was found to be a good approximation to total precipitation rates in a regional model \citep{RETAL2016CD} and in the CAM-SE AGCM with CAM5 physics, across multiple resolutions \citep{OETAL2016JAMES}. Figure~\ref{fig:mflux} shows the median convective, stratiform and total precipitation rates conditioned on the $850$ hPa moisture flux using $1$ mm/day bins, in the CAM6 $ne30$ simulation. The figure shows that the moisture flux is a good approximation to the median total precipitation rate, and that the increase in precipitation rates with moisture flux is primarily from the stratiform precipitation scheme. 
+Through approximating the cloud base as the $850$ hPa level, equation~\ref{eq:mflux} was found to provide to provide a good fit to total precipitation rates in a regional model \citep{RETAL2016CD} and in the CAM-SE AGCM with CAM5 physics, across multiple resolutions \citep{OETAL2016JAMES}. Figure~\ref{fig:mflux} shows the median convective, stratiform and total precipitation rates conditioned on the $850$ hPa moisture flux using $1$ mm/day bins, in the CAM6 $ne30$ simulation. The figure shows that the moisture flux is a good approximation to the median total precipitation rate, and that the increase in precipitation rates with moisture flux is primarily from the stratiform precipitation scheme. 
 
 \begin{figure}
 \begin{center}
